--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.android.support:cardview-v7:23.1.0'
 
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    compile 'com.squareup.okhttp:logging-interceptor:2.6.0-SNAPSHOT'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'io.realm:realm-android:0.84.1'
 }
